# phononwebsite

./: .gitignore  COPYING  INSTALL  README.md  contact.html  gaia.json  index.html  markdown2html.sh  material.py  models.json  neighbors.py  old.html  output.html  package.json  phonon.html  phonon_standalone.html  phonondb.yaml  phononwebsite.js  phononwebsite.module.js  pyproject.toml  read_materials.py  read_nc.py  readme.html  ref_index.html  rollup.config.mjs  setup.py  setupt.py  tests.html  update_index.py
contribdb/: models.json  read_materials.py
css/: .style.css.swp  style.css
doc/: code_structure.rst  tests.rst
graphene/: anaddb.files  anaddb.in  anaddb.out_PHBST.nc  data.json  grphon.DDB  high-sym-kpoints.py
js/: CCapture.js  atomic_data.js  combinations.js  complex.min.js  contribdb.js  display_phonon.js  export.js  import.js  jmolcolors.js  localdb.js  localmpdb.js  localphonondb.js  localphonondb2015.js  localphonondb2017.js  main.js  mat.js  mpdb.js  phonon.js  phonondb.js  phonondb2015.js  phononhighcharts.js  phononjson.js  phononweb.js  phononyaml.js  utils.js  vibcrystal.js  vibmol.js
libs/: jsyaml_amd_wrapper.js
localdb/: models.json  read_materials.py
mos2_bulk/: anaddb.files  anaddb.out_PHBST.nc  data.json
mos2_singlelayer/: anaddb.in  anaddb.out_PHBST.nc  data.json  high-sym-kpoints.py  output.DDB
mote2_bulk/: anaddb.out_PHBST.nc  data.json  mote2.dyn  mote2.fc  mote2.modes
mote2_singlelayer/: anaddb.out_PHBST.nc  data.json  mote2.dyn  mote2.matdyn  mote2.scf
mpdb/: models.json
phonondb2015/: phonondb.json  yaml_to_json.py
(+133 files in other folders)
