[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "phononwebsite"
version = "0.1"
authors = [{name = "Henrique Miranda", email = "miranda.henrique@gmail.com"}]
description = "Read abinit and quantum espresso phonon dispersions to visualize on the phonon website."
